Ensure Save As dialog is visible when invoked from a popup panel (#15967)
* prevent Save As panel from appearing behind popup panel

* NEWS

--- a/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
+++ b/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
@@ -612,7 +612,7 @@ pre {
 }
 
 .gwt-DialogBox-ModalDialog, .gwt-DecoratedPopupPanel {
-   z-index: 1000;
+   z-index: 1002;
 }
 
 .gwt-SuggestBoxPopup {
